Normalize to 1-SNAPSHOT; SNAPSHOT refs; jvm.config docs
Workspace aggregator version 1.0.0-SNAPSHOT → 1-SNAPSHOT per the
single-segment version convention. Pin cross-repo refs
(ike-platform.version, ike-docs.version) to 1-SNAPSHOT and
ike-tooling.version to 126 in both the root POM and its/pom.xml.

CLAUDE.md now carries the .mvn/jvm.config no-hash-comments warning
that ike-platform/CLAUDE.md and ike-docs/CLAUDE.md already document.